--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,13 +19,29 @@ services:
             - '.:/var/www/html'
         networks:
             - sail
-    mailhog:
-        image: 'mailhog/mailhog:latest'
+        depends_on:
+            - mysql
+    mysql:
+        image: 'mysql:8.0'
         ports:
-            - '${FORWARD_MAILHOG_PORT:-1025}:1025'
-            - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
+            - '${FORWARD_DB_PORT:-3306}:3306'
+        environment:
+            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
+            MYSQL_DATABASE: '${DB_DATABASE}'
+            MYSQL_USER: '${DB_USERNAME}'
+            MYSQL_PASSWORD: '${DB_PASSWORD}'
+            MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+        volumes:
+            - 'sailmysql:/var/lib/mysql'
         networks:
             - sail
+        healthcheck:
+          test: ["CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}"]
+          retries: 3
+          timeout: 5s
 networks:
     sail:
         driver: bridge
+volumes:
+    sailmysql:
+        driver: local
